# torchx

./: .flake8  .lintrunner.toml  .pre-commit-config.yaml  .pyre_configuration  CONTRIBUTING.md  README.md  dev-requirements.txt  fmt-requirements.txt  index.md  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.json
.claude/commands/: review.md
.claude/rules/: architecture.md  cli.md  coding-conventions.md  development.md  docker.md  documentation.md  python-docstring-google-style.md  uv-lock-management.md  uv.md
.claude/scripts/: post-claude-edit.sh
.github/: dependabot.yml
.github/workflows/: aws-batch-integration-tests.yaml  components-integration-tests.yaml  container.yaml  doc-build.yaml  kubernetes-minikube-integration-test.yaml  lint.yaml  nightly.yaml  pyre.yaml  python-unittests.yaml  slurm-local-integration-tests.yaml
0.8.0dev0/: .buildinfo  advanced.html  api_reference.html  app_best_practices.html  basics.html  cli.html  component_best_practices.html  custom_components.html  custom_components.ipynb  deprecations.html  genindex.html  index.html  objects.inv  plugins.html  py-modindex.html  quickstart.html  quickstart.ipynb  runner.config.html  runner.html  schedulers.html  search.html  searchindex.js  specs.html  tracker.html  workspace.html
0.8.0dev0/_downloads/3307ea8173b3a0daed92ace8cd5485c0/: main.ipynb
0.8.0dev0/_downloads/40fb577f3f2ef780a44b11e17604f7db/: profiler.ipynb
0.8.0dev0/_downloads/8864efa22eb65973921940c15f49c1c6/: interpret.ipynb
0.8.0dev0/_downloads/aa9126ac42feba435a6adfad334158ae/: data.ipynb
0.8.0dev0/_downloads/bbea10f1708e72da1b1913bb7c90e9d2/: train.ipynb
0.8.0dev0/_downloads/ccbdef91dec24692117eb10e4ebd6258/: model.ipynb
0.8.0dev0/_downloads/d5d52f7ba663ecbc1972af21201712fc/: datapreproc.ipynb
0.8.0dev0/_modules/: index.html
0.8.0dev0/_modules/torchx/: deprecations.html  schedulers.html  specs.html
0.8.0dev0/_sources/: advanced.rst.txt  api_reference.rst.txt  basics.rst.txt  component_best_practices.rst.txt  index.rst.txt  quickstart.rst.txt  runner.rst.txt  schedulers.rst.txt  specs.rst.txt
0.8.0dev0/_sources/components/: distributed.rst.txt  interpret.rst.txt  utils.rst.txt
0.8.0dev0/_sources/examples_apps/: index.rst.txt
0.8.0dev0/_static/js/: torchx.js
0.8.0dev0/components/: distributed.html  interpret.html  metrics.html  overview.html  serve.html  train.html  utils.html
0.8.0dev0/examples_apps/: index.html
0.8.0dev0/examples_apps/datapreproc/: datapreproc.html
0.8.0dev0/examples_apps/lightning/: data.html  interpret.html  model.html  profiler.html  train.html
0.8.0dev0/runtime/: overview.html  tracking.html
0.8.0dev0/schedulers/: aws_batch.html  aws_sagemaker.html  docker.html  kubernetes.html  kubernetes_mcad.html  local.html  lsf.html  slurm.html
0.8.0dev0/workspaces/: docker.html
docs/: .gitignore  Makefile  doc_push.sh  requirements.txt  versions_html.py
docs/source/: advanced.rst  api_reference.rst  app_best_practices.rst  basics.rst  cli.rst  component_best_practices.rst  conf.py  custom_components.rst  deprecations.rst  index.rst  plugins.rst  runner.config.rst  schedulers.rst  specs.rst  tracker.rst  workspace.rst
docs/source/components/: overview.rst  serve.rst  utils.rst
docs/source/ext/: fbcode.py
docs/source/runtime/: overview.rst  tracking.rst
docs/source/schedulers/: aws_batch.rst  aws_sagemaker.rst  docker.rst  kubernetes.rst  kubernetes_mcad.rst  local.rst  lsf.rst
docs/source/workspaces/: docker.rst
scripts/: collect_env.py  component_integration_tests.py  minikube_trainer.py  push_nightly.sh  setup_minikube.sh  slurmdockerint.sh
stubs/: filelock.pyi
torchx/: base_version_gen.py  deprecations.py  settings.py  version.py  version_gen.py
torchx/cli/: argparse_util.py  cmd_configure.py  cmd_list.py  cmd_log.py  cmd_run.py  cmd_runopts.py  colors.py  main.py
torchx/components/: __init__.py  component_test_base.py  dist.py  interpret.py  metrics.py  train.py  utils.py
torchx/distributed/: __init__.py
torchx/plugins/: __init__.py  _registration.py  _registry.py
torchx/runner/: __init__.py  api.py  config.py
torchx/schedulers/: __init__.py  api.py  aws_batch_scheduler.py  aws_sagemaker_scheduler.py  docker_scheduler.py  ids.py  kubernetes_mcad_scheduler.py  kubernetes_scheduler.py  local_scheduler.py  lsf_scheduler.py  slurm_scheduler.py
torchx/specs/: __init__.py  api.py  builders.py  file_linter.py  finder.py  named_resources_aws.py  named_resources_generic.py  overlays.py
torchx/test/: deprecations_test.py  fixtures.py  settings_test.py
torchx/tracker/: api.py  mlflow.py
torchx/util/: session.py  types.py
torchx/workspace/: api.py  dir_workspace.py  docker_workspace.py
torchx_plugins/schedulers/: kueue.py
(+101 files in other folders)
